// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`euiProgressStyles indeterminate div CSS colors accent 1`] = `
"&::before {
    background-color: #BC1E70;
  };;label:accent;"
`;

exports[`euiProgressStyles indeterminate div CSS colors accentSecondary 1`] = `
"&::before {
    background-color: #008B87;
  };;label:accentSecondary;"
`;

exports[`euiProgressStyles indeterminate div CSS colors danger 1`] = `
"&::before {
    background-color: #C61E25;
  };;label:danger;"
`;

exports[`euiProgressStyles indeterminate div CSS colors primary 1`] = `
"&::before {
    background-color: #0B64DD;
  };;label:primary;"
`;

exports[`euiProgressStyles indeterminate div CSS colors subdued 1`] = `
"&::before {
    background-color: #516381;
  };;label:subdued;"
`;

exports[`euiProgressStyles indeterminate div CSS colors success 1`] = `
"&::before {
    background-color: #008A5E;
  };;label:success;"
`;

exports[`euiProgressStyles indeterminate div CSS colors vis0 1`] = `
"&::before {
    background-color: #16C5C0;
  };;label:vis0;"
`;

exports[`euiProgressStyles indeterminate div CSS colors vis1 1`] = `
"&::before {
    background-color: #A6EDEA;
  };;label:vis1;"
`;

exports[`euiProgressStyles indeterminate div CSS colors vis2 1`] = `
"&::before {
    background-color: #61A2FF;
  };;label:vis2;"
`;

exports[`euiProgressStyles indeterminate div CSS colors vis3 1`] = `
"&::before {
    background-color: #BFDBFF;
  };;label:vis3;"
`;

exports[`euiProgressStyles indeterminate div CSS colors vis4 1`] = `
"&::before {
    background-color: #EE72A6;
  };;label:vis4;"
`;

exports[`euiProgressStyles indeterminate div CSS colors vis5 1`] = `
"&::before {
    background-color: #FFC7DB;
  };;label:vis5;"
`;

exports[`euiProgressStyles indeterminate div CSS colors vis6 1`] = `
"&::before {
    background-color: #F6726A;
  };;label:vis6;"
`;

exports[`euiProgressStyles indeterminate div CSS colors vis7 1`] = `
"&::before {
    background-color: #FFC9C2;
  };;label:vis7;"
`;

exports[`euiProgressStyles indeterminate div CSS colors vis8 1`] = `
"&::before {
    background-color: #EAAE01;
  };;label:vis8;"
`;

exports[`euiProgressStyles indeterminate div CSS colors vis9 1`] = `
"&::before {
    background-color: #FCD883;
  };;label:vis9;"
`;

exports[`euiProgressStyles indeterminate div CSS colors warning 1`] = `
"&::before {
    background-color: #FACB3D;
  };;label:warning;"
`;

exports[`euiProgressStyles indeterminate div CSS positions absolute 1`] = `
"position:absolute;
  inset-block-start: 0;
  inset-inline-start: 0;
  inset-inline-end: 0;
  background-color: transparent;
  
 border-start-start-radius: inherit; border-start-end-radius: inherit;;;label:absolute;"
`;

exports[`euiProgressStyles indeterminate div CSS positions fixed 1`] = `
"position:fixed;z-index:1001;
  inset-block-start: 0;
  inset-inline-start: 0;
  inset-inline-end: 0;
  background-color: transparent;
  
;;label:fixed;"
`;

exports[`euiProgressStyles indeterminate div CSS positions static 1`] = `"position:relative;label:static;"`;

exports[`euiProgressStyles native progress CSS colors accent 1`] = `
"&::-webkit-progress-value {
    background-color: #BC1E70;
  }
  &::-moz-progress-bar {
    background-color: #BC1E70;
  };;label:accent;"
`;

exports[`euiProgressStyles native progress CSS colors accentSecondary 1`] = `
"&::-webkit-progress-value {
    background-color: #008B87;
  }
  &::-moz-progress-bar {
    background-color: #008B87;
  };;label:accentSecondary;"
`;

exports[`euiProgressStyles native progress CSS colors danger 1`] = `
"&::-webkit-progress-value {
    background-color: #C61E25;
  }
  &::-moz-progress-bar {
    background-color: #C61E25;
  };;label:danger;"
`;

exports[`euiProgressStyles native progress CSS colors primary 1`] = `
"&::-webkit-progress-value {
    background-color: #0B64DD;
  }
  &::-moz-progress-bar {
    background-color: #0B64DD;
  };;label:primary;"
`;

exports[`euiProgressStyles native progress CSS colors subdued 1`] = `
"&::-webkit-progress-value {
    background-color: #516381;
  }
  &::-moz-progress-bar {
    background-color: #516381;
  };;label:subdued;"
`;

exports[`euiProgressStyles native progress CSS colors success 1`] = `
"&::-webkit-progress-value {
    background-color: #008A5E;
  }
  &::-moz-progress-bar {
    background-color: #008A5E;
  };;label:success;"
`;

exports[`euiProgressStyles native progress CSS colors vis0 1`] = `
"&::-webkit-progress-value {
    background-color: #16C5C0;
  }
  &::-moz-progress-bar {
    background-color: #16C5C0;
  };;label:vis0;"
`;

exports[`euiProgressStyles native progress CSS colors vis1 1`] = `
"&::-webkit-progress-value {
    background-color: #A6EDEA;
  }
  &::-moz-progress-bar {
    background-color: #A6EDEA;
  };;label:vis1;"
`;

exports[`euiProgressStyles native progress CSS colors vis2 1`] = `
"&::-webkit-progress-value {
    background-color: #61A2FF;
  }
  &::-moz-progress-bar {
    background-color: #61A2FF;
  };;label:vis2;"
`;

exports[`euiProgressStyles native progress CSS colors vis3 1`] = `
"&::-webkit-progress-value {
    background-color: #BFDBFF;
  }
  &::-moz-progress-bar {
    background-color: #BFDBFF;
  };;label:vis3;"
`;

exports[`euiProgressStyles native progress CSS colors vis4 1`] = `
"&::-webkit-progress-value {
    background-color: #EE72A6;
  }
  &::-moz-progress-bar {
    background-color: #EE72A6;
  };;label:vis4;"
`;

exports[`euiProgressStyles native progress CSS colors vis5 1`] = `
"&::-webkit-progress-value {
    background-color: #FFC7DB;
  }
  &::-moz-progress-bar {
    background-color: #FFC7DB;
  };;label:vis5;"
`;

exports[`euiProgressStyles native progress CSS colors vis6 1`] = `
"&::-webkit-progress-value {
    background-color: #F6726A;
  }
  &::-moz-progress-bar {
    background-color: #F6726A;
  };;label:vis6;"
`;

exports[`euiProgressStyles native progress CSS colors vis7 1`] = `
"&::-webkit-progress-value {
    background-color: #FFC9C2;
  }
  &::-moz-progress-bar {
    background-color: #FFC9C2;
  };;label:vis7;"
`;

exports[`euiProgressStyles native progress CSS colors vis8 1`] = `
"&::-webkit-progress-value {
    background-color: #EAAE01;
  }
  &::-moz-progress-bar {
    background-color: #EAAE01;
  };;label:vis8;"
`;

exports[`euiProgressStyles native progress CSS colors vis9 1`] = `
"&::-webkit-progress-value {
    background-color: #FCD883;
  }
  &::-moz-progress-bar {
    background-color: #FCD883;
  };;label:vis9;"
`;

exports[`euiProgressStyles native progress CSS colors warning 1`] = `
"&::-webkit-progress-value {
    background-color: #FACB3D;
  }
  &::-moz-progress-bar {
    background-color: #FACB3D;
  };;label:warning;"
`;

exports[`euiProgressStyles native progress CSS positions absolute 1`] = `
"position:absolute;
  inset-block-start: 0;
  inset-inline-start: 0;
  inset-inline-end: 0;
  background-color: transparent;
  
      &::-webkit-progress-bar {
        background-color: transparent;
      }
 border-start-start-radius: inherit; border-start-end-radius: inherit;;;label:absolute;"
`;

exports[`euiProgressStyles native progress CSS positions fixed 1`] = `
"position:fixed;z-index:1001;
  inset-block-start: 0;
  inset-inline-start: 0;
  inset-inline-end: 0;
  background-color: transparent;
  
      &::-webkit-progress-bar {
        background-color: transparent;
      }
;;label:fixed;"
`;

exports[`euiProgressStyles native progress CSS positions static 1`] = `"position:relative;label:static;"`;
